# demoday

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
CD/: auth.py  example.py  main.py
demoday/: asgi.py  settings.py  urls.py  wsgi.py
main/: serializers.py  views.py
